# schematics

./: .coverage  .coveragerc  .gitignore  .gitmodules  .pylintrc  .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  READISH.md  README.md  README.rst  asv.conf.json  azure-pipelines.yml  dev-requirements.txt  doc-requirements.txt  pyproject.toml  requirements-testing.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
benchmarks/: .gitignore  README.md  asv.conf.json  run.sh
demos/: alt_id_name.py  basic_objects.py  creating_objects.py  diff_obj_id.py  embedded_docs.py  embedded_documents.py  json_schema.py  minimize.py  mixins.py  multilayer_permissions.py  simple_embedded.py  simple_lists.py  validation.py
dictshield/: base.py  bson.py  datastructures.py  document.py  fields.py  forms.py
docs/: DEMOS.md  DESIGN.md  LICENSE.md  Makefile  api.rst  community.rst  conf.py  contents.rst.inc  development.rst  documentation.rst  exporting.rst  index.rst  install.rst  models.rst  quickstart.rst  serialization.rst  toc.rst  types.rst  validation.rst
examples/: README.md  creating_objects.py  creating_objects_output.txt  embedded_docs.py  embedded_docs_output.txt  simple_embedded.py  simple_embedded_output.txt  validation.py  validation_output.txt
schematics/: __init__.py  base.py  common.py  compat.py  datastructures.py  deprecated.py  exceptions.py  filters.py  forms.py  iteration.py  models.py  role.py  schema.py  schema.pyi  serialize.py  transforms.py  translator.py  undefined.py  util.py  validate.py  validation.py
schemv/: __init__.py  deprecated.py
structures/: base.py  datastructures.py  forms.py  models.py
tests/: __init__.py  _test_list_type.py  document.py  fixtures.py  json_conversion.py  list_field.py  model_serialization.py  path_type.py  test_base_types.py  test_binding.py  test_choices.py  test_compound.py  test_conversion.py  (+40 more)
(+84 files in other folders)
