[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[compile_catalog]
domain = schematics
directory = schematics/locale

[extract_messages]
input_dirs = schematics
output_file = schematics/locale/schematics.pot
copyright_holder = Schematics Project

[init_catalog]
domain = schematics
input_file = schematics/locale/schematics.pot
output_dir = schematics/locale
